<?xml version="1.0"?>
<package format="2">
  <name>ORB_SLAM2</name>
  <version>0.0.0</version>
  <description>ARC Lab's Modified ORB_SLAM2</description>

<maintainer email="frichter@eng.ucsd.edu">arclab</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


    <build_depend>cv_bridge</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>Pangolin</build_depend>
    <build_depend>OpenCV</build_depend>
    <build_depend>Eigen3</build_depend>

    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>Pangolin</build_export_depend>
    <build_export_depend>OpenCV</build_export_depend>
    <build_export_depend>Eigen3</build_export_depend>

    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>Pangolin</exec_depend>
    <exec_depend>OpenCV</exec_depend>
    <exec_depend>Eigen3</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
